<resources>
    <string name="app_name">QuizApp</string>
    <string name="question_1">Question 1: Who is the President of USA?</string>
    <string name="question_2">Question 2: Who is the following person?</string>
    <string name="question_3">Question 3: Who is the CEO of Facebook Inc?</string>
    <string name="question_4">Question 4: Which of these are capital cities? Select all that apply.</string>
    <string name="question_5">Question 5: Who is the founder of Microsoft?</string>
    <string name="question_6">Question 6: Who is the founder of Apple?</string>
    <string name="question_7">Question 7: Who is the Prime Minister of United Kingdom?</string>
    <string name="question_8">Question 8: Who among the following are co-founders of Infosys. Select all that Apply.</string>
    <string name="question_9">Question 9: What is the capital of Brazil?</string>
    <string name="question_10">Question 10: What is the capital of Sri Lanka?</string>
    <string name="donald_trump">Donald Trump</string>
    <string name="barrack_obama">Barrack Obama</string>
    <string name="hillary_clinton">Hillary Clinton</string>
    <string name="vlamidir_putin">Vlamidir Putin</string>
    <string name="narender_modi">Narender Modi</string>
    <string name="amitabh_bachchan">Amitabh Bachchan</string>
    <string name="arvind_kejriwal">Arvind Kejriwal</string>
    <string name="edittext_hint">Write the name here..</string>
    <string name="delhi">Delhi</string>
    <string name="washington_dc">Washington DC</string>
    <string name="mumbai">Mumbai</string>
    <string name="phuket">Phuket</string>
    <string name="theresa_april">Theresa April</string>
    <string name="theresa_may">Theresa May</string>
    <string name="theresa_june">Theresa June</string>
    <string name="theresa_july">Theresa July</string>
    <string name="n_r_narayana_murthy">N. R. Narayana Murthy</string>
    <string name="ranbir_kapoor">Ranbir Kapoor</string>
    <string name="nandan_nilekani">Nandan Nilekani</string>
    <string name="binny_bansal">Binny Bansal</string>
    <string name="rio_de_janeiro">Rio de Janeiro</string>
    <string name="salvador">Salvador</string>
    <string name="sao_paulo">Sao Paulo</string>
    <string name="manaus">Manaus</string>
    <string name="colombo">Colombo</string>
    <string name="galle">Galle</string>
    <string name="kandy">Kandy</string>
    <string name="madras">Madras</string>
    <string name="submit_answers">Submit Answers</string>
    <string name="reset_answers">Reset Answers</string>
    <string name="spinner_default_selection">Select Answer..</string>
    <string name="steve_jobs">Steve Jobs</string>
    <string name="larry_page">Larry Page</string>
    <string name="bill_gates">Bill Gates</string>
    <string name="mark_zuckerberg">Mark Zuckerberg</string>
</resources>
